--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Twitter Sentiment Analysis </title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- plugins:css -->
   <link rel="stylesheet" href="{{ url_for('static', filename = 'vendors/feather/feather.css')}}">
   <link rel="stylesheet" href="{{ url_for('static', filename = 'vendors/mdi/css/materialdesignicons.min.css')}}">
@@ -23,6 +24,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename = 'css/vertical-layout-light/style.css')}}">
   <!-- endinject -->
   <link rel="shortcut icon" href="{{ url_for('static', filename = 'images/favicon.png')}}" />
+  
 </head>
 <body>
   <div class="container-scroller">
@@ -41,10 +43,11 @@
         <ul class="navbar-nav topspace">
           <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
             <h1 class="welcome-text "> <span class="text-black fw-bold">Sentiment Analysis {{positive_count}}</span></h1>
-            <h3 class="welcome-sub-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur dictumst nisi, 
-              accumsan, nullam pretium viverra vitae magnis. Eget facilisi pretium et egestas eu
-              consectetur adipiscing elit. Consectetur dictumst nisi, accumsan, nullam pretium viverra vitae magnis. Eget facilisi pretium et egestas eu
-              
+            <h3 class="welcome-sub-text">
+              Through natural language processing, we compare sentiments from tweets to
+              stock prices within a given day to find out if there is a correlation between sentiments on twitter and stock
+               prices.
+
             </h3>
           </li>
         </ul>
@@ -174,9 +177,9 @@
   <!-- container-scroller -->
 
   <!-- Bootstrap:js -->
-  <script src="{{ url_for('static', filename = 'https://code.jquery.com/jquery-3.3.1.slim.min.js')}}" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="{{ url_for('static', filename = 'https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js')}}" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="{{ url_for('static', filename = 'https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js')}}" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   
   <!-- plugins:js -->
   <script src="{{ url_for('static', filename = 'vendors/js/vendor.bundle.base.js')}}"></script>
@@ -201,20 +204,41 @@
   
   <!-- End custom js for this page-->
 
-  <script>
+<script>
+
+    $(document).ready(function(){
+      //var _data;
+      //var _labels;
+      console.log("working")
+     $.ajax({
+      url: "/get_data",
+      type: "GET",
+      data: {vals: ''},
+      success: function(response) {
+        
+        full_data = JSON.parse(response.payload);
+        const _data = full_data['data'];
+        const _labels = full_data['labels'];
+        const _sentiments = full_data['sentiments']
+        console.log(full_data)
+      
+
+
     $(function() {
       /* ChartJS
        * -------
        * Data and config for chartjs
        */
+       console.log("sentiments:")
+       console.log(_sentiments)
       'use strict';
       var data = {
-        labels : ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+        labels : _labels,
         //labels: [{% for label in labels %} {{label}},{% endfor %}],
         //labels: {{labels}},
         datasets: [{
           label: 'Stock Prices',
-          data: [12, 19, 3, 5, 2, 3]
+          data: _data,
           //data: [{% for value in stock_list %} {{value}},{% endfor %}],
           //data: {{stock_list}},
           backgroundColor: [
@@ -288,7 +312,8 @@
       };
       var doughnutPieData = {
         datasets: [{
-          data: [{% for val in vals %} {{val}},{% endfor %}],
+          data: _sentiments,
+          //data: [{% for val in vals %} {{val}},{% endfor %}],
           backgroundColor: [
             'rgba(255, 99, 132, 0.5)',
             'rgba(54, 162, 235, 0.5)',
@@ -568,7 +593,15 @@
       }
     });
 
-  </script>
+  },
+      
+   
+})
+});
+
+
+</script>
+
 </body>
 
 </html>
