--- a/templates/index.html
+++ b/templates/index.html
@@ -41,10 +41,9 @@
         <ul class="navbar-nav topspace">
           <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
             <h1 class="welcome-text "> <span class="text-black fw-bold">Sentiment Analysis {{positive_count}}</span></h1>
-            <h3 class="welcome-sub-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur dictumst nisi, 
-              accumsan, nullam pretium viverra vitae magnis. Eget facilisi pretium et egestas eu
-              consectetur adipiscing elit. Consectetur dictumst nisi, accumsan, nullam pretium viverra vitae magnis. Eget facilisi pretium et egestas eu
-              
+            <h3 class="welcome-sub-text">Through natural language processing, we compare sentiments from tweets to
+              stock prices within a given day to find out if there is a correlation between sentiments on twitter and stock
+              prices.
             </h3>
           </li>
         </ul>
